feat: Redis 세션 연동 및 User API N+1